[package]
name = "gql_input_unions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
juniper = "0.15.11"
juniper_warp = "0.7.0"
log = "0.4.17"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread"] }
warp = "0.3.3"
